deploy/k8s/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drugapp
  namespace: drugapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drugapp
  template:
    metadata:
      labels:
        app: drugapp
    spec:
      nodeSelector:
        kubernetes.io/hostname: nst-n4  

      containers:
        - name: drugapp
          image: localhost:30500/drug-backend:v1
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8000

          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1Gi

          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 20
            periodSeconds: 20
