deploy/k8s/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: drugapp
  namespace: drugapp
spec:
  type: ClusterIP
  selector:
    app: drugapp
  ports:
    - port: 80
      targetPort: 8000
